# audio-transcription

./: .gitignore  apptainer.def  main.ipynb  main.py  pyproject.toml  requirements.txt  transcribe.py
